# Python-workflow

./: README.md  pyproject.toml  test_calculator  test_calculator.py
.github/worflow/: check-python.yml  python-reusable-workflow.yml
.github/workflows/: call-workflow.yml  codeql.yml  main.yml  python-reusable-workflow.yml
